WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52580
Web Inspector: script column offset is incorrect
https://bugs.webkit.org/show_bug.cgi?id=52580
Summary
Web Inspector: script column offset is incorrect
Pavel Podivilov
Reported
2011-01-17 08:06:44 PST
Created
attachment 79178
[details]
snippet For attached document, script column offset is 10 (one-based) while it should be 9.
Attachments
snippet
(68 bytes, text/html)
2011-01-17 08:06 PST
,
Pavel Podivilov
no flags
Details
Patch
(2.51 KB, patch)
2011-01-18 06:03 PST
,
Peter Rybin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Rybin
Comment 1
2011-01-18 06:03:06 PST
Created
attachment 79272
[details]
Patch
Yury Semikhatsky
Comment 2
2011-01-18 07:28:18 PST
Comment on
attachment 79272
[details]
Patch Can we have a test for this change?
Yury Semikhatsky
Comment 3
2011-01-19 01:17:51 PST
Comment on
attachment 79272
[details]
Patch Clearing flags on attachment: 79272 Committed
r76106
: <
http://trac.webkit.org/changeset/76106
>
Yury Semikhatsky
Comment 4
2011-01-19 01:18:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug