2011-01-19  Peter Rybin  <peter.rybin@gmail.com>

Reviewed by Yury Semikhatsky.

        Web Inspector: script column offset is incorrect
        https://bugs.webkit.org/show_bug.cgi?id=52580

        Column is updated in 3 places, 2 less probable places contained error.
        Fixed now.

        * platform/text/SegmentedString.cpp:
        (WebCore::SegmentedString::advanceSlowCase):
        * platform/text/SegmentedString.h:
        (WebCore::SegmentedString::advancePastNewline):

Canonical link: https://commits.webkit.org/66344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76106 268f45cc-cd09-0410-ab3c-d52691b4dbfc